<resources>
    <string name="app_name">학복관 그선배</string>
    <string name="todo">TODO</string>
    <string name="success_login">구글 로그인 성공</string>
    <string name="failed_login">구글 로그인 실패</string>
    <string name="success_logout">로그아웃 되었습니다</string>
    <string name="status_login">이미 로그인 되어있습니다</string>

    // 이 부분은 Gcp를 들어가서
    //내 Auth2.0의 클라이언트 id에서 default_web_client_id를 확인해서 가져오면 됩니다!
    <string name="web_client_id">260568281022-f8c1q5t7s7k7cb5kq5ou1u12j6bhdplf.apps.googleusercontent.com</string>
    <string name="kkui_main_desc">항아리 버튼</string>
    <string name="alrmy_logo">alrmy_logo</string>
    <string name="warning">* 학생복지회관 내부가 다소 혼잡할 수 있습니다 *</string>
    <string name="today">오늘은\n2024년 4월 14일 일요일 입니다</string>
    <string name="home">홈</string>
    <string name="chat">커뮤니티</string>
    <string name="list">주문현황</string>
    <string name="mypage">마이페이지</string>
    <string name="menu_waring">모든 메뉴는 한정판매가 될 수 있습니다.</string>
    <string name="today_menu">오늘의 메뉴</string>
    <string name="mon">MON</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="fri">FRI</string>
    <string name="d_16">16</string>
    <string name="d_17">17</string>
    <string name="d_18">18</string>
    <string name="d_19">19</string>
    <string name="d_20">20</string>
    <string name="jumun_title">주문하기</string>
    <string name="paylist">결제수단</string>
    <string name="naver_pay">네이버페이</string>
    <string name="toss_pay">토스페이</string>
    <string name="kakao_pay">카카오페이</string>
    <string name="pay_money">18,000원 결제하기 (3개)</string>
    <string name="pay_waring">*(주)학복관알리미는 통신판매중개자이며, 통신판매의 당사자가 아님니다. 따라서 *(주)학복관알리미는 상품, 거래정보 및 거래에 대하여 책임을 지지 않습니다.</string>
    <string name="event_title">이벤트</string>
    <string name="hospital">보건실</string>
    <string name="woman_restroom">여자휴게실</string>
    <string name="student_hostroom">학생회실</string>
    <string name="map_title">위치맵</string>
    <string name="cu">CU</string>
    <string name="art_store">누보아트</string>
    <string name="print_store">복사점</string>
    <string name="bread_cafe">브래댄코</string>
    <string name="coffee_cafe">cafe ing</string>
    <string name="post_office">우체국</string>
    <string name="popup_store">팝업샵</string>
    <string name="stairs">계단</string>
    <string name="clean_store">클린\n토피아</string>
    <string name="book_store">서점</string>
    <string name="_5f">5F</string>
    <string name="_1f">1F</string>
    <string name="convenience_store">편의점</string>
    <string name="open">Open</string>
    <string name="cu_open">월~금 07:00</string>
    <string name="close">Close</string>
    <string name="cu_close1">월~목 19:00</string>
    <string name="cu_close2">금 18:00</string>
    <string name="cu_call">041-584-3860</string>
    <string name="cu_instar">cu_namseoul3</string>
    <string name="art">누보아트</string>
    <string name="art_room">문구점</string>
    <string name="art_call">041-580-0990</string>
    <string name="art_open">월~금 8:50</string>
    <string name="art_close">월~금 19:30</string>
    <string name="print">남서울대 복사점</string>
    <string name="print_room">복사점</string>
    <string name="print_call">010-8324-4832</string>
    <string name="print_open">월~금 07:00</string>
    <string name="print_close">월~금 19:00</string>
    <string name="clean">클린토피아</string>
    <string name="clean_room">세탁소</string>
    <string name="clean_call">041-587-3681</string>
    <string name="claen_open">월~금 09:30</string>
    <string name="clean_close">월~금 18:30</string>
    <string name="bread">브래댄코</string>
    <string name="bread_room">빵집</string>
    <string name="bread_call">041-582-3850</string>
    <string name="bread_open">월~금 07:00</string>
    <string name="bread_close">월~금 19:00</string>
    <string name="popup">남서울대 팝업샵</string>
    <string name="popup_room">팝업샵</string>
    <string name="popup_call">041-584-3860</string>
    <string name="popup_open">월~금 07:00</string>
    <string name="popup_close1">월~목 19:00</string>
    <string name="popup_close2">금 18:00</string>
    <string name="post">우체국 남서울대점</string>
    <string name="post_room">우체국</string>
    <string name="post_call">041-582-1919</string>
    <string name="post_open">월~금 07:00</string>
    <string name="post_close">월~금 18:00</string>
    <string name="book">남서울대 서점</string>
    <string name="book_room">서점</string>
    <string name="book_call">010-9042-1772</string>
    <string name="book_open">월~금 07:00</string>
    <string name="book_close">월~금 18:00</string>
    <string name="cafe">카페 아이앤지</string>
    <string name="cafe_room">카페</string>
    <string name="cafe_call">010-4750-4434</string>
    <string name="cafe_open">월~금 07:00</string>
    <string name="cafe_close">월~금 18:00</string>
    <string name="chat_Qna">건의사항</string>
    <string name="caht_lunch">점메추</string>
    <string name="chat_all">전체</string>
    <string name="chat_main">커뮤니티</string>
    <string name="chat_chat">글쓰기</string>
    <string name="chat_tittle">제목</string>
    <string name="chat_detail">내용</string>
    <string name="chat_wring">홈페이지 회원은 모든 게시판에 글을 쓰실 수 있습니다.\n주의사항\n1. 게시판(정책제안, QnA)의 목적에 맞지 않을 경우 등록된 게시물은 게시자에게 통보없이 삭제 될 수 있습니다.\n2. 게시글을 통해 주민등록번호 등 개인정보를 유포하는 경우 고의성이 없거나 그 내용이 사실일지라도 유포의 구체적인 내용에 따라 사생활 침해 및 명예훼손으로 간주돼 법적 처벌을 받거나 손해배상 책임이 생길 수 있습니다.\n2006년 9월 25일 부터 개정된 주민등록법에 의하여 타인의 주민등록번호를 도용하여 회원가입을 하는 등 다른 사람의 주민등록번호를 부정하게 사용한 사람은 3년 이하의 징역 또는 1천만원 이하의 벌금이 부과될 수 있습니다.\n관련법률 : 주민등록법 제 21조(벌칙) 제2항 9호 (시행일 2006.9.25)\n만일, 타인의 주민등록번호를 도용하여 회원가입을 하신 이용자분들은 지금 즉시, 명의도용을 중단하시기 바랍니다.</string>
    <string name="anonymity">익명</string>
    <string name="chat_list">점메추</string>
    <string name="chat_contents">커뮤니티</string>
    <string name="user">사용자</string>
    <string name="date">날짜</string>
    <string name="user_user">댓글_사용자</string>
    <string name="tittle">제목</string>
    <string name="contents">내용</string>
    <string name="comment_time">댓글_시간</string>
    <string name="comment_contents">댓글_내용</string>
    <string name="good">좋아요</string>
    <string name="save">스크랩</string>
    <string name="user_chack">익명</string>
    <string name="comment_place">댓글창</string>
    <string name="Monday">MON</string>
    <string name="Tuesday">TUE</string>
    <string name="Wednesday">WED</string>
    <string name="Thursday">THU</string>
    <string name="Friday">FRI</string>
    <string name="ad_image_desc">광고 이미지</string>
    <string name="ad_list_desc">광고 목록입니다</string>
    <string name="hair_call">0507-1484-1915</string>
    <string name="hair_open">화~토 07:00</string>
    <string name="hair_close">화~토 18:00</string>
    <string name="hair">남서울대 리안헤어</string>
    <string name="hair_room">미용실</string>
    <string-array name="category_list">
        <item>점메추</item>
        <item>건의사항</item>
    </string-array>
    <string name="yori">요리덮밥</string>
    <string name="dak">닭덮밥</string>
    <string name="chi">치킨마요</string>
    <string name="eum">음료</string>



</resources>