<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="600dp"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">

    <!-- 상단 네비게이션 바 -->
    <FrameLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 오늘 날짜 텍스트 -->
    <TextView
        android:id="@+id/today_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="오늘 날짜"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/congestion_bar"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        app:layout_constraintTop_toBottomOf="@id/today_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 채워지는 색상 바 -->
        <View
            android:id="@+id/congestion_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/congestion_fill_background" />

        <!-- 혼잡도 텍스트 -->
        <TextView
            android:id="@+id/congestion_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="혼잡도"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#000000" />
    </FrameLayout>


    <!-- 이하 내용은 기존과 동일하게 유지 -->
    <!-- 표 -->
    <GridLayout
        android:id="@+id/order_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:columnCount="5"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/congestion_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 5*6 임시 데이터 삽입 -->
        <!-- 헤더 -->
        <TextView android:text="순위" style="@style/TableHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="가게 이름" style="@style/TableHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="메뉴명" style="@style/TableHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="조리 완료" style="@style/TableHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="주문 대기" style="@style/TableHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>

        <!-- 데이터 행 -->
        <TextView android:text="1" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>

        <TextView android:text="2" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>

        <TextView android:text="3" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>

        <TextView android:text="4" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>

        <TextView android:text="5" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>
        <TextView android:text="●" style="@style/TableCell" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_columnWeight="1"/>

    </GridLayout>

    <!-- 주문 버튼 -->
    <ImageView
        android:id="@+id/main_order"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintTop_toBottomOf="@id/order_table"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/ico_jumun"
        android:scaleType="centerInside" />

    <!-- 위치맵 버튼 -->
    <ImageView
        android:id="@+id/main_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.43"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toTopOf="@id/main_order"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ico_map"
        android:scaleType="centerInside"
        android:layout_marginEnd="24dp" />

    <!-- 오늘의 메뉴 버튼 -->
    <ImageView
        android:id="@+id/main_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.43"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/main_map"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ico_tomenu"
        android:scaleType="centerInside"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp" />

    <!-- 광고 영역 -->
    <ImageView
        android:id="@+id/main_Advert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/main_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_news"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 홈 버튼 -->
        <LinearLayout
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/home"
                android:scaleType="centerInside"
                android:src="@drawable/ico_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:layout_marginTop="6dp"
                android:textColor="#FF000000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 채팅 버튼 -->
        <LinearLayout
            android:id="@+id/main_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/chat"
                android:scaleType="centerInside"
                android:src="@drawable/ico_chat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chat"
                android:layout_marginTop="6dp"
                android:textColor="#FF000000"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 리스트 버튼 -->
        <LinearLayout
            android:id="@+id/main_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/list"
                android:scaleType="centerInside"
                android:src="@drawable/ico_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/list"
                android:layout_marginTop="6dp"
                android:textColor="#FF000000"
                android:textSize="15sp" />
        </LinearLayout>


        <!-- 마이페이지 버튼 -->
        <LinearLayout
            android:id="@+id/main_mypage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/ico_my"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@null"
                android:contentDescription="@string/mypage"
                android:scaleType="centerInside"
                android:src="@drawable/ico_my" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mypage"
                android:layout_marginTop="6dp"
                android:textColor="#FF000000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>